[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/dialog/dialog_box.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=3]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/cavestory_small.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="dialog_box" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = -140.0
margin_top = -60.0
margin_right = 140.0
margin_bottom = 60.0

[node name="TextInterfaceEngine" type="ReferenceRect" parent="Panel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.98
margin_right = -11.0
margin_bottom = -12.6
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
BREAK_ON_MAX_LINES = false
FONT = ExtResource( 5 )

[node name="speaker" type="Panel" parent="."]
margin_left = -47.0
margin_top = -83.881
margin_right = 47.0
margin_bottom = -57.881

[node name="Label" type="Label" parent="speaker"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Speakertest"
align = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="buff_end" from="Panel/TextInterfaceEngine" to="." method="_on_TextInterfaceEngine_buff_end"]
